overflow fix

--- a/styles.scss
+++ b/styles.scss
@@ -2,8 +2,8 @@ html, body {
     height: 100%;
     width: 100%;
     // overflow: hidden;
-    overflow-y: overlay;
-    overflow-x: hidden;
+    // overflow-y: overlay;
+    // overflow-x: hidden;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
